--- a/day4/package.json
+++ b/day4/package.json
@@ -26,7 +26,9 @@
     "nodemon": "^3.0.3",
     "promise-mysql2": "^1.0.0",
     "qs": "^6.10.3",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
